@@ -232,3 +232,5 @@ plot_spectra_no_fc = boolean(default=False)
 # Max number of rows in plots
 plot_spectra_maxrows = integer(default=3)
 plot_traces_maxrows = integer(default=6)
+# Plot station map
+plot_station_map = boolean(default=False)
